--- a/Session-3/Assignment-3/src/serverless/requirements.txt
+++ b/Session-3/Assignment-3/src/serverless/requirements.txt
@@ -1,4 +1,5 @@
-https://download.pytorch.org/whl/cpu/torch-1.5.0%2Bcpu-cp38-cp38-linux_x86_64.whl
-torchvision==0.6.0
+# https://download.pytorch.org/whl/cpu/torch-1.5.0%2Bcpu-cp38-cp38-linux_x86_64.whl
 requests_toolbelt
+pillow
 dlib
+opencv-python-headless
