--- a/Session-7/Assignment-7/src/serverless/serverless.yml
+++ b/Session-7/Assignment-7/src/serverless/serverless.yml
@@ -1,59 +1,81 @@
-service: s6ganrealfake
+# Welcome to Serverless!
+#
+# This file is the main config file for your service.
+# It's very minimal at this point and uses default values.
+# You can always add more config options for more control.
+# We've included some commented out config examples here.
+# Just uncomment any of them to get that config option.
+#
+# For full config options, check the docs:
+#    docs.serverless.com
+#
+# Happy Coding!
+
+service: vaesvc
+# app and org for use with dashboard.serverless.com
+#app: your-app-name
+#org: your-org-name
+
+# You can pin your service to only deploy with a specific Serverless version
+# Check out our docs for more details
+# frameworkVersion: "=X.X.X"
 
 provider:
-    name: aws
-    runtime: python3.8
-    stage: dev
-    region: ap-south-1
-    timeout: 60
+  name: aws
+  runtime: python3.8
+  stage: dev
+  region: ap-south-1
+  timeout: 60
 
-    environment:
-        MODEL_BUCKET_NAME: suman-p2-bucket
-    iamRoleStatements:
-        - Effect: "Allow"
-          Action:
-            - s3:getObject
-          Resource: arn:aws:s3:::suman-p2-bucket/*
+  environment:
+    MODEL_BUCKET_NAME: eva4p2bucket1
+    MODEL_FILE_NAME_KEY: model-vae.pt
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - s3:getObject
+      Resource: arn:aws:s3:::eva4p2bucket1/*
+
 custom:
-    pythonRequirements:
-        dockerizePip: true
-        zip: true
-        slim: true
-        strip: false
-        noDeploy:
-            - docutils
-            - jmespath
-            - pip
-            - python-dateutil
-            - setuptools
-            - six
-            - tensorboard
-        useStaticCache: true
-        useDonwloadCache: true
-        cacheLocation: "./cache"
-        
+  pythonRequirements:
+    dockerizePip: true
+    zip: true
+    slim: true
+    strip: false
+    noDeploy:
+      - docutils
+      - jmespath
+      - pip
+      - python-dateutil
+      - setuptools
+      - six
+      - tensorboard
+    useStaticCache: true
+    useDonwloadCache: true
+    cacheLocation: "./cache"
+
 package:
-    individually: false
-    exclude:
-        - package.json
-        - package-log.json
-        - node_modules/**
-        - cache/**
-        - test/**
-        - __pycache__/**
-        - .pytest_cache/**
-        - model/**
-        
+  individually: false
+  exclude:
+    - package.json
+    - package-log.json
+    - node_modules/**
+    - cache/**
+    - test/**
+    - __pycache__/**
+    - .pytest_cache/**
+    - model/**
+
 functions:
-    main_handler:
-        handler: handler.dcGAN_car
-        memorySize: 3008
-        timeout: 60
-        events:
-            - http:
-                path: gan
-                method: get
-                cors: true
+  generatefakeimage:
+    handler: handler.generatefakeimage
+    memorySize: 3008
+    timeout: 60
+    events:
+      - http:
+          path: vae
+          method: get
+          cors: true
 
 plugins:
   - serverless-python-requirements
