--- a/Session-8/Assignment-8/src/serverless/serverless.yml
+++ b/Session-8/Assignment-8/src/serverless/serverless.yml
@@ -1,81 +1,60 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
-service: vaesvc
-# app and org for use with dashboard.serverless.com
-#app: your-app-name
-#org: your-org-name
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
+service: s8SRGAN
 
 provider:
-  name: aws
-  runtime: python3.8
-  stage: dev
-  region: ap-south-1
-  timeout: 60
-
-  environment:
-    MODEL_BUCKET_NAME: eva4p2bucket1
-    MODEL_FILE_NAME_KEY: model-vae.pt
-  iamRoleStatements:
-    - Effect: "Allow"
-      Action:
-        - s3:getObject
-      Resource: arn:aws:s3:::eva4p2bucket1/*
-
-custom:
-  pythonRequirements:
-    dockerizePip: true
-    zip: true
-    slim: true
-    strip: false
-    noDeploy:
-      - docutils
-      - jmespath
-      - pip
-      - python-dateutil
-      - setuptools
-      - six
-      - tensorboard
-    useStaticCache: true
-    useDonwloadCache: true
-    cacheLocation: "./cache"
-
-package:
-  individually: false
-  exclude:
-    - package.json
-    - package-log.json
-    - node_modules/**
-    - cache/**
-    - test/**
-    - __pycache__/**
-    - .pytest_cache/**
-    - model/**
-
-functions:
-  generatefakeimage:
-    handler: handler.generatefakeimage
-    memorySize: 3008
+    name: aws
+    runtime: python3.8
+    stage: dev
+    region: ap-south-1
     timeout: 60
-    events:
-      - http:
-          path: vae
-          method: get
-          cors: true
+
+    environment:
+        MODEL_BUCKET_NAME: suman-p2-bucket
+        MODEL_FILE_NAME_KEY: s8_SRGAN_netG_epoch_2_50.pth
+    iamRoleStatements:
+        - Effect: "Allow"
+          Action:
+            - s3:getObject
+          Resource: arn:aws:s3:::suman-p2-bucket/*
+custom:
+    pythonRequirements:
+        dockerizePip: true
+        zip: true
+        slim: true
+        strip: false
+        noDeploy:
+            - docutils
+            - jmespath
+            - pip
+            - python-dateutil
+            - setuptools
+            - six
+            - tensorboard
+        useStaticCache: true
+        useDonwloadCache: true
+        cacheLocation: "./cache"
+        
+package:
+    individually: false
+    exclude:
+        - package.json
+        - package-log.json
+        - node_modules/**
+        - cache/**
+        - test/**
+        - __pycache__/**
+        - .pytest_cache/**
+        - model/**
+        
+functions:
+    main_handler:
+        handler: handler.SRGAN
+        memorySize: 3008
+        timeout: 60
+        events:
+            - http:
+                path: srgan
+                method: post
+                cors: true
 
 plugins:
   - serverless-python-requirements
