--- a/Session-9/Assignment-9/src/serverless/serverless.yml
+++ b/Session-9/Assignment-9/src/serverless/serverless.yml
@@ -1,60 +1,33 @@
-service: neuralstyletransfer
+service: sentiment-analysis-service
 
 provider:
-    name: aws
-    runtime: python3.8
-    stage: dev
-    region: ap-south-1
-    timeout: 60
+  name: aws
+  runtime: python3.6
+  stage: dev
+  region: ap-south-1
+  timeout: 60
+  environment:
+    S3_BUCKET: suman-p2-bucket
+    TORCH_TEXT_FIELD: TEXT_fields_cnn2.pkl
+    MODEL_PATH: sentiment_analysis_model_cnn2_st_dct.pt 
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - s3:getObject
+      Resource: arn:aws:s3:::suman-p2-bucket/*
 
-    environment:
-        MODEL_BUCKET_NAME: eva4p2bucket1
-        MODEL_FILE_NAME_KEY: model-nst.pt
-    iamRoleStatements:
-        - Effect: "Allow"
-          Action:
-            - s3:getObject
-          Resource: arn:aws:s3:::eva4p2bucket1/*
-custom:
-    pythonRequirements:
-        dockerizePip: true
-        zip: true
-        slim: true
-        strip: false
-        noDeploy:
-            - docutils
-            - jmespath
-            - pip
-            - python-dateutil
-            - setuptools
-            - six
-            - tensorboard
-        useStaticCache: true
-        useDonwloadCache: true
-        cacheLocation: "./cache"
-        
-package:
-    individually: false
-    exclude:
-        - package.json
-        - package-log.json
-        - node_modules/**
-        - cache/**
-        - test/**
-        - __pycache__/**
-        - .pytest_cache/**
-        - model/**
-        
+
+
 functions:
-    main_handler:
-        handler: handler.getneuralstyletransfer
-        memorySize: 3008
-        timeout: 60
-        events:
-            - http:
-                path: nst
-                method: post
-                cors: true
+  predict:
+    handler: handler.predictSentiment
+    memorySize: 3008
+    timeout: 60
+    events:
+      - http:
+          path: predict
+          method: post
+          cors: true
+    layers:
+      - arn:aws:lambda:ap-south-1:936131757702:layer:gp-torchtext-spacy-pytorch-layer:2
 
-plugins:
-  - serverless-python-requirements
