--- a/Session-11/Assignment-11/src/serverless/requirements.txt
+++ b/Session-11/Assignment-11/src/serverless/requirements.txt
@@ -1,3 +1,4 @@
 https://download.pytorch.org/whl/cpu/torch-1.5.0%2Bcpu-cp38-cp38-linux_x86_64.whl
-https://files.pythonhosted.org/packages/c6/bc/b28b9efb4653c03e597ed207264eea45862b5260f48e9f010b5068d64db1/torchtext-0.3.1-py3-none-any.whl
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz#egg=en_core_web_sm==2.3.1
+dill==0.3.2
+spacy==2.2.4
+# https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.0.0a0/de_core_news_sm-3.0.0a0.tar.gz
