--- a/Session-11/Assignment-11/src/serverless/package.json
+++ b/Session-11/Assignment-11/src/serverless/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "dev-eva4-p2-assignment-5",
+  "name": "s11g2e-test",
   "description": "",
   "version": "0.1.0",
   "dependencies": {},
-  "scripts": {
-    "deploy": "serverless deploy"
-  },
   "devDependencies": {
-    "serverless": "^1.67.0",
     "serverless-python-requirements": "^5.1.0"
   }
 }
