--- a/Session-11/Assignment-11/src/ui/src/sentiment-app/package.json
+++ b/Session-11/Assignment-11/src/ui/src/sentiment-app/package.json
@@ -43,10 +43,12 @@
     "@nguniversal/express-engine": "0.0.0",
     "@nguniversal/module-map-ngfactory-loader": "0.0.0",
     "aws-serverless-express": "^3.3.6",
+    "bootstrap": "^4.5.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "domino": "^2.1.3",
     "express": "^4.15.2",
+    "jquery": "^3.5.1",
     "rxjs": "~6.3.3",
     "serverless-api-compression": "^1.0.0",
     "tslib": "^1.9.0",
