--- a/Session-12/Assignment-12/src/serverless/package.json
+++ b/Session-12/Assignment-12/src/serverless/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "s11g2e-test",
+  "name": "image-caption-test",
   "description": "",
   "version": "0.1.0",
   "dependencies": {},
+  "scripts": {
+    "deploy": "serverless deploy"
+  },
   "devDependencies": {
+    "serverless": "^1.67.0",
     "serverless-python-requirements": "^5.1.0"
   }
 }
