--- a/Session-12/Assignment-12/src/serverless/serverless.yml
+++ b/Session-12/Assignment-12/src/serverless/serverless.yml
@@ -15,6 +15,36 @@ provider:
         - s3:getObject
       Resource: arn:aws:s3:::eva4p2bucket1/*
 
+custom:
+  pythonRequirements:
+    dockerizePip: true
+    zip: true
+    slim: true
+    strip: false
+    noDeploy:
+      - docutils
+      - jmespath
+      - pip
+      - python-dateutil
+      - setuptools
+      - six
+      - tensorboard
+    useStaticCache: true
+    useDonwloadCache: true
+    cacheLocation: "./cache"
+
+package:
+  individually: false
+  exclude:
+    - package.json
+    - package-log.json
+    - node_modules/**
+    - cache/**
+    - test/**
+    - __pycache__/**
+    - .pytest_cache/**
+    - model/**
+          
 functions:
   imagecaption:
     handler: handler.generatecaption
