--- a/Session-12/Assignment-12/src/serverless-1/serverless.yml
+++ b/Session-12/Assignment-12/src/serverless-1/serverless.yml
@@ -26,6 +26,14 @@ provider:
   stage: dev
   region: ap-south-1
   timeout: 60
+  environment:
+    S3_BUCKET: eva4p2bucket1
+    MODEL_PATH: model-caption.pth.tar
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - s3:getObject
+      Resource: arn:aws:s3:::eva4p2bucket1/*
 
 custom:
   pythonRequirements:
@@ -56,7 +64,7 @@ package:
     - __pycache__/**
     - .pytest_cache/**
     - model/**
-    
+
 functions:
   imagecaption:
     handler: handler.generatecaption
@@ -70,47 +78,3 @@ functions:
 
 plugins:
   - serverless-python-requirements
-#      - websocket: $connect
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-#      - alb:
-#          listenerArn: arn:aws:elasticloadbalancing:us-east-1:XXXXXX:listener/app/my-load-balancer/50dc6c495c0c9188/
-#          priority: 1
-#          conditions:
-#            host: example.com
-#            path: /hello
-
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
-
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
