--- a/Session-13/Assignment-13/src/serverless/serverless.yml
+++ b/Session-13/Assignment-13/src/serverless/serverless.yml
@@ -23,6 +23,8 @@ frameworkVersion: '2'
 provider:
   name: aws
   runtime: python3.8
+  apiGateway:
+    shouldStartNameWithService: true
 
 functions:
   hello:
