--- a/Session-13/Assignment-13/src/serverless/requirements.txt
+++ b/Session-13/Assignment-13/src/serverless/requirements.txt
@@ -1,4 +1,3 @@
-# https://download.pytorch.org/whl/cpu/torch-1.5.1%2Bcpu-cp38-cp38-linux_x86_64.whl
-torch
-torchaudio
+# https://download.pytorch.org/whl/cpu/torch-1.7.0%2Bcpu-cp38-cp38-linux_x86_64.whl
+torchaudio==0.5.1
 requests_toolbelt
