A13-added package exclusions

--- a/Session-13/Assignment-13/src/serverless/serverless.yml
+++ b/Session-13/Assignment-13/src/serverless/serverless.yml
@@ -26,6 +26,36 @@ provider:
   apiGateway:
     shouldStartNameWithService: true
 
+custom:
+  pythonRequirements:
+    dockerizePip: true
+    zip: true
+    slim: true
+    strip: false
+    noDeploy:
+      - docutils
+      - jmespath
+      - pip
+      - python-dateutil
+      - setuptools
+      - six
+      - tensorboard
+    useStaticCache: true
+    useDonwloadCache: true
+    cacheLocation: "./cache"
+
+package:
+  individually: false
+  exclude:
+    - package.json
+    - package-log.json
+    - node_modules/**
+    - cache/**
+    - test/**
+    - __pycache__/**
+    - .pytest_cache/**
+    - model/**
+
 functions:
   hello:
     handler: handler.hello
