--- a/Capstone/Project/src/frontend/src1/ai-endeavour/angular.json
+++ b/Capstone/Project/src/frontend/src1/ai-endeavour/angular.json
@@ -116,6 +116,14 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ]
+            },
+            "serverless": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.serverless.ts"
+                }
+              ]
             }
           }
         }
