Added dummy predict endpoint

--- a/Capstone/Project/src/backend/src/serverless.yml
+++ b/Capstone/Project/src/backend/src/serverless.yml
@@ -55,5 +55,13 @@ functions:
           method: post
           cors: true
 
+  predict:
+    handler: handler.predict
+    events:
+      - http:
+          path: predict
+          method: post
+          cors: true
+
 plugins:
   - serverless-python-requirements
