Preview 10 records of a CSV

--- a/Capstone/Project/src/backend/src/serverless.yml
+++ b/Capstone/Project/src/backend/src/serverless.yml
@@ -55,6 +55,14 @@ functions:
           method: post
           cors: true
 
+  train:
+    handler: handler.train
+    events:
+      - http:
+          path: train
+          method: get
+          cors: true
+
   predict:
     handler: handler.predict
     events:
