Added Sentiment analysis

--- a/Capstone/Project/src/backend/src/serverless.yml
+++ b/Capstone/Project/src/backend/src/serverless.yml
@@ -60,7 +60,7 @@ functions:
     events:
       - http:
           path: train
-          method: get
+          method: post
           cors: true
 
   predict:
