--- a/Capstone/Project/src/frontend/src/ai-endeavour/tsconfig.json
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/tsconfig.json
@@ -19,6 +19,7 @@
       "dom"
     ],
     "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
   }
 }
