--- a/Capstone/Project/src/frontend/src/ai-endeavour/package.json
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/package.json
@@ -42,6 +42,7 @@
     "@nguniversal/common": "0.0.0",
     "@nguniversal/express-engine": "0.0.0",
     "@nguniversal/module-map-ngfactory-loader": "0.0.0",
+    "angular-responsive-carousel": "^2.0.2",
     "aws-serverless-express": "^3.3.6",
     "bootstrap": "^5.0.0-beta1",
     "core-js": "^2.5.4",
