Using Bootstrap Carousel

--- a/Capstone/Project/src/frontend/src/ai-endeavour/tsconfig.json
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/tsconfig.json
@@ -19,7 +19,6 @@
       "dom"
     ],
     "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true
+    "allowSyntheticDefaultImports": true
   }
 }
