Fixed issue with Nav bar in mobile

--- a/Capstone/Project/src/frontend/src/ai-endeavour/package.json
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/package.json
@@ -37,13 +37,14 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/platform-server": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "@ng-toolkit/serverless": "^8.1.0",
     "@ng-toolkit/universal": "^7.1.2",
     "@nguniversal/common": "0.0.0",
     "@nguniversal/express-engine": "0.0.0",
     "@nguniversal/module-map-ngfactory-loader": "0.0.0",
     "aws-serverless-express": "^3.3.6",
-    "bootstrap": "^5.0.0-beta1",
+    "bootstrap": "^4.5.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "domino": "^2.1.3",
